2009-01-15 Og Maciel <ogmaciel@gnome.org>

	* stats/management/commands/update-trans.py: Removed the option argument
	DISTINCT to make it work with sqlite.

2009-01-14  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Translate description in domain.get_description.
	* templates/people/person_detail.html:
	* templates/vertimus/vertimus_detail.html: Use domain.get_description.

2009-01-14  Claude Paroz  <claude@2xlibre.net>

	* media/css/main.css: Added style for having the translation graph outside
	of a table.
	* stats/models.py: Added ability to a Statistics object to render the
	corresponding pot file URL.
	* stats/tests/__init__.py: Added tests for po_url and pot_url.
	* templates/stats_show.html: Translation fix, and use of MEDIA_URL.
	* templates/vertimus/vertimus_detail.html: Remove a 'formatting' table.
	Add link to POT file. Fixes bug #567705.

2009-01-13  Claude Paroz  <claude@2xlibre.net>

	* templates/people/person_detail.html: Only show site language popup on
	his own page.
	* vertimus/forms.py: Add a help text to the File widget.
	* vertimus/models.py: Set extension of uploaded files identical to
	original file.
	Fixes #567512.

2009-01-10  Claude Paroz  <claude@2xlibre.net>

	* settings_sample.py: Middleware ordering matters. Session should be first.
	* stats/models.py: One less function call...
	* urls.py: Import view for language setting.
	* templates/people/person_detail.html: Add form to change language for a
	registered user.
	Fixes bug #475527.

2009-01-10  Claude Paroz  <claude@2xlibre.net>

	reviewed by: <delete if not using a buddy>

	* settings_sample.py:
	* stats/models.py:
	* templates/people/person_detail.html:
	* urls.py:

2009-01-10  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: For git (and hg?) modules, all branches share the same
	vcs_root.
	Don't make vcs_root an URLField, too picky about validation.

2009-01-10  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Put XGETTEXT_ARG in env dict.